# deribit_parser

./: .flake8  .pre-commit-config.yaml  Makefile  README.md  default.env  docker-compose.yml  requirements.txt
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 79ae52210a7f_create_index_price.py
backend/app/: main.py
backend/app/api_managers/: __init__.py  derebit_api_manager.py
backend/app/core/: celery.py  config.py  db.py
backend/app/core/api_manager/: base.py  exceptions.py
backend/app/core/utils/: unix_now.py
backend/app/integrations/: deribit_api_manager.py
backend/app/models/: __init__.py  index_price.py
backend/app/routes/: __init__.py  index_price.py
backend/app/tasks/: __init__.py  clear_old_prices.py  parse_index_price.py
